# RecommenderSystems

chapter5/: Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml
chapter5/notebook/: 5-3_Random.ipynb  5-4_Popularity.ipynb  5-5_Association.ipynb  5-6_UMCF.ipynb  5-7_RF.ipynb  5-8-2_SVD.ipynb  5-8-3_NMF.ipynb  5-8-4_MF.ipynb  5-8-5_IMF.ipynb  5-8-6_BPR.ipynb  5-8-7_FM.ipynb  5-9-1_LDA_content.ipynb  5-9-3_LDA_collaboration.ipynb  5-9-4_Word2vec.ipynb  5-9-6_Item2vec.ipunb  Template.ipynb  data_download.ipynb
chapter5/src/: association.py  base_recommender.py  bpr.py  fm.py  imf.py  lda_collaboration.py  lda_content.py  mf.py  nmf.py  popularity.py  random.py  rf.py  svd.py  umcf.py
