[tool.poetry]
name = "recommendersystems"
version = "0.1.0"
description = "Code for Practical Introduction to Recommender Systems(O'Reilly Japan)"
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"
jupyterlab = "^4.1.8"
jedi = "^0.19.1"
matplotlib = "^3.8.4"
gensim = "^4.3.2"
implicit = "^0.7.2"
wheel = "^0.43.0"
ipywidgets = "^8.1.2"
mlxtend = "^0.23.1"
xlearn = "^0.40a1"
scipy = "<1.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"
taskipy = "^1.12.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
